--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
+    "rpg-awesome": "^0.1.1",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
